<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/action_restart_test"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/restart_test"/>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_import"/>
    <item
        android:id="@+id/action_context_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_context_settings"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    

</menu>